dist_descriptions_DATA =

dist_descriptions_DATA += text.desc
dist_descriptions_DATA += tar.desc

if SUPPORT_GZIP
dist_descriptions_DATA += gzip.desc
endif
if SUPPORT_ZIP
dist_descriptions_DATA += zip.desc
endif
if SUPPORT_PDF
dist_descriptions_DATA += pdf.desc
endif
if SUPPORT_WORD
dist_descriptions_DATA += word.desc
endif
if SUPPORT_EXCEL
dist_descriptions_DATA += excel.desc
endif

if HAVE_RUBY
dist_descriptions_DATA += ruby.desc
endif
