EXTRA_DIST =					\
	index.html				\
	ja95.doc				\
	ja97.doc				\
	sample.doc				\
	sample.html				\
	sample.pdf				\
	sample.ppt				\
	sample.tar.gz				\
	sample.xls				\
	sample.zip				\
	sample_2007.xlsx			\
	sample_euc_jp.html			\
	sample_ja.doc				\
	sample_ja.ppt				\
	sample_multi_pages.pdf			\
	sample_utf8.html
